# django-gdpstorage

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
gdpstorage/: apps.py  gd_service.py  storage.py  urls.py  views.py
gdpstorage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gdpstorage/models/: softdelete.py  timestamp.py
